refactor: using the player in the root aplication

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,12 @@
 <router-outlet />
+@if (playerConfig()) {
+<app-player
+  [playlist]="playerConfig()!.playlist"
+  [currentIndex]="playerConfig()!.currentIndex"
+  [isPlaying]="playerConfig()!.isPlaying"
+  (playEvent)="playerConfig()!.playEvent($event)"
+  (closeEvent)="playerConfig()!.closeEvent()"
+  (playingChange)="playerConfig()!.playingChange($event)"
+  (loadMore)="playerConfig()!.loadMore()"
+></app-player>
+}
